# TornadoPlatoApp

./: .gitignore  .gitmodules  Keybinds.h  Keybinds_local.h  TornadoPlatoApp.sln  docker-compose.yml  readme.md  shell.nix  toOptimize.txt  todo.txt  tornado.vpp
App/: App.cpp  App.vcxproj  App.vcxproj.filters
Doxygen/: doxyrun.sh  eule_doxyfig  plato_doxyfig  readme.md  tornado_doxyfig
Eule/: .gitignore  Collider.h  Constants.h  Eule.vcxproj  Eule.vcxproj.filters  Math.cpp  Math.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h  Rect.h  TopologicalBoxCollider.cpp  TopologicalBoxCollider.h  TrapazoidalPrismCollider.cpp  TrapazoidalPrismCollider.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  gcccompat.h  readme.md  version.h
Eule/Eule/: CMakeLists.txt  Constants.h  Math.cpp  Math.h  Matrix4x4.cpp  Quaternion.cpp  Quaternion.h  TrapazoidalPrismCollider.h  Vector2.cpp  Vector3.cpp  Vector3.h  Vector4.cpp  version.h
Eule/Test/: CMakeLists.txt  Math__Abs.cpp  Math__Clamp.cpp  Math__Lerp.cpp  Math__Max.cpp  Math__Min.cpp  Math__Mod.cpp  Math__Oscillate.cpp  Math__Similar.cpp  Matrix4x4.cpp  Quaternion.cpp  Random_RandomIntRange.cpp  Random__RandomFloat.cpp  Random__RandomInteger.cpp  Random__RandomRange.cpp  TrapazoidalPrismCollider.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  VectorConversion.cpp
Frontend/: RenderWindow.cpp  RenderWindow.h  SDL2RenderWindow.cpp  SDL2RenderWindow.h  TerminalBlockCharacterRenderWindow.cpp  TerminalBlockCharacterRenderWindow.h
Plato/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Clock.cpp  Clock.h  Collider.cpp  Collider.h  Color.h  Component.cpp  Component.h  EventManager.cpp  EventManager.h  Event_ReverseEventCallback.h  KeyCode.h  KeyState.h  Keyboard.cpp  Keyboard.h  LightSource.cpp  LightSource.h  MTLParser.cpp  MTLParser.h  Material.h  Math.h  Matrix4x4.h  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Mouse.cpp  Mouse.h  OBJParser.cpp  OBJParser.h  Plato.cpp  Plato.h  Plato.vcxproj  Plato.vcxproj.filters  PointLight.cpp  PointLight.h  Prefab.h  (+20 more)
Tornado/: BackfaceCullingEngine.cpp  BackfaceCullingEngine.h  BarycentricInterpolationEngine.cpp  BarycentricInterpolationEngine.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  ClippingEngine.cpp  ClippingEngine.h  Color.cpp  Color.h  Constants.h  CrossPlatformSyscalls.cpp  CrossPlatformSyscalls.h  DrawingEngine.cpp  DrawingEngine.h  Endian.h  InterRenderTriangle.cpp  InterRenderTriangle.h  InterRenderVertex.cpp  InterRenderVertex.h  LightingEngine.cpp  LightingEngine.h  Material.cpp  Material.h  Math.cpp  Math.h  Matrix4x4.cpp  Matrix4x4.h  PixelBuffer.cpp  PixelBuffer.h  ProjectionEngine.cpp  ProjectionEngine.h  ProjectionProperties.cpp  ProjectionProperties.h  Rect.h  RenderLightSource.cpp  RenderLightSource.h  RenderPointLight.cpp  RenderPointLight.h  (+17 more)
_Player_Benchmark/: BenchmarkPlayer.cpp  BenchmarkPlayer.h  BenchmarkScene.cpp  BenchmarkScene.h  Benchmarkscene.cpp  Benchmarkscene.h  CMakeLists.txt  CaveCamFlightScene.cpp  CaveCamFlightScene.h  HighResModelScene.cpp  HighResModelScene.h  PerformanceMetric.h  RenderWindow.cpp  RenderWindow.h  main.cpp  readme.md
_Player_Benchmark/Scenes/CaveCamFlight/: CaveCamFlightScene.cpp  CaveCamFlightScene.h
_Player_Benchmark/Scenes/Dust2/: Dust2Scene.cpp  Dust2Scene.h
_Player_Benchmark/Scenes/Dust2/assets/: dust2.mtl
_Player_Benchmark/Scenes/HighResModel/: HighResModelScene.cpp  HighResModelScene.h
_Player_Benchmark/dataplotter/: .gitignore  plot-fps.py  plot-metrics.py  shell.nix
_Player_Benchmark/dataplotter/performance-metrics/: last-run-fps.csv  last-run.csv
_Test_Acceptance_Tests/: CMakeLists.txt  TestFixture.cpp  Test__FPS.cpp  Test__FPS.h  Test__Lighting__PointLight.cpp  Test__Lighting__PointLight.h  Test__OBJParser__Load.cpp  Test__OBJParser__Load.h  Test__OBJParser__LoadMultimesh.cpp  Test__OBJParser__LoadMultimesh.h  Test__TextureProjectionWorks.cpp  Test__TextureProjectionWorks.h  Test__TransformHierarchy__ChangeParent.cpp  Test__TransformHierarchy__ChangeParent.h  Test__TransformHierarchy__ClearParent.cpp  Test__TransformHierarchy__ClearParent.h  Test__TransformHierarchy__Curl.cpp  Test__TransformHierarchy__Curl.h  main.cpp
_Test_All/: CMakeLists.txt
_Test_Plato/: CMakeLists.txt  Camera.cpp  Clock.cpp  Component.cpp  Component.h  Quaternion.cpp  ResourceManager.cpp  Transform.cpp  WorldObject.cpp  WorldObjectManager.cpp  _Test_Plato.vcxproj  _Test_Plato.vcxproj.filters  main.cpp
_Test_Tornado/: BackfaceCullingEngine.cpp  BarycentricInterpolationEngine.cpp  BoundingBox.cpp  CMakeLists.txt  ClippingEngine.cpp  Color.cpp  HandyMacros.h  InterRenderVertex.cpp  Math_Abs.cpp  Math_Clamp.cpp  Math_Lerp.cpp  Math_Max.cpp  Math_Min.cpp  Math_Random.cpp  Math_RandomIntRange.cpp  Math_RandomInteger.cpp  Math_Similar.cpp  Math__Oscillate.cpp  Math__RandomRange.cpp  Matrix4x4.cpp  PixelBuffer.cpp  ProjectionProperties.cpp  Similar.cpp  Similar.h  Testutil.h  Texture.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  VectorConversion.cpp  Worker.cpp  WorkerPool.cpp  _Test_Tornado.vcxproj  _Test_Tornado.vcxproj.filters
_Testapp/: CMakeLists.txt  HeadlessFPS.cpp  Test__Cube.cpp  Test__Cube.h  Test__FPS.h  Test__MC.cpp  Test__MC.h  Test__Yubi.cpp  Test__Yubi.h  main.cpp
_Testapp/assets/: mc_world.mtl
_TestappSDL2/: CMakeLists.txt  CameraExclKeyboardControl.h  CameraFPSKeyboardControl.h  CameraKeyboardControl.h  RenderWindow.h  Test__Benchmarkscene.cpp  Test__Benchmarkscene.h  Test__Cube.cpp  Test__Cube.h  Test__MC.cpp  Util.h  main.cpp  shell.nix
_TestappSDL2_OpenCL/: CMakeLists.txt  main.cpp
_TestappTERM/: CMakeLists.txt  Test__FPS.cpp  Test__FPS.h  Test__MC.cpp  Test__MC.h  Test__Yubi.h  main.cpp
_Testapp_FPS_Headless/: CMakeLists.txt  CameraKeyboardControl.h  HeadlessFPS.h  TestFixture.h  Test__Cube.cpp  Test__Cube.h  Test__FPS.cpp  Test__FPS.h  Test__MC.cpp  Test__MC.h  Test__Yubi.cpp  main.cpp
_Testapp_FPS_Headless/build_mac/: CMakeCache.txt  Makefile  __Testapp_FPS_Headless  cmake_install.cmake
_Testapp_FPS_Headless/build_mac/assets/: yubi.mtl
(+117 files in other folders)
